--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
@@ -61,7 +65,7 @@
                 <version>3.3.2</version>
                 <configuration>
                     <to>
-                        <image>devskillslearning/${project.artifactId}:v5.0</image>
+                        <image>devskillslearning/${project.artifactId}:v6.0</image>
                     </to>
                 </configuration>
             </plugin>
